# ExchangeRate

./: .env  .gitignore  .gitlab-ci.yml  README.md  package-lock.json  package.json  pyproject.toml
DC Script/: DrawChart.py
backend/client/: models.py  serializers.py  views.py
backend/exchange/: admin.py  api.py  chart.py  email.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/kernel/: celery.py  settings.py  urls.py
backend/templates/: graph.html
backend/transaction/: admin.py  models.py  serializers.py  urls.py  views.py
ci/composes/: kernel.yaml
ci/dockerfiles/: frontend.Dockerfile  kernel.Dockerfile  kernel.Dockerfile.dockerignore
ci/requirements/: requirements.txt
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Chart.ts  LineChart.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: About.vue  Home.vue  LogIn.vue  SignUp.vue
frontend/src/views/dashboard/: AddClient.vue  BuyCurrency.vue  Calculator.vue  ChangeBalance.vue  Client.vue  Currency.vue  Dashboard.vue  EditClient.vue  MyAccount.vue  SellCurrency.vue
