[tool.poetry]
name = "hurtownia"
version = "0.1.0"
description = ""
authors = ["Åukasz Ryndak", "Dominik Cibor", "Mateusz Szozda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = "^3.1.13"
django = "^4.2.9"
celery = "^5.3.6"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
flower = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
